Fix scroll on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ main, section {
   }
   .about_text {
     overflow: auto;
+    height: 57vh;
   }
   .card-text {
     overflow: auto;
